css/look.css
body {
  text-align: left;
  color:  #335;
  background-color: #eee; 
  background-image: url(media/bg.gif);
}

a { text-decoration: none; }

body {
 font-family: "Trebuchet MS", "Gill Sans", Geneva, Arial, Helvetica, sans-serif;
 font-size:  medium;
}

h1,h2,h3 {
  font-family: "Trebuchet MS", "Gill Sans", Geneva, Arial, Helvetica, sans-serif;
  font-style: italic; 
  letter-spacing: 0.05em;
  line-height:1.1em;
}

h4 { font-size: medium; }

h5,h5 input.tagedit { 
 font-size: small !important;
 font-weight: normal !important;
 color: #aaa !important;
}

h4 {
 border-left: 1px solid #ddd;
}

a:hover,input:hover {color: #336; }
a,input,select,h4 { color: #667 }
h5 a { color: inherit }

input { 
 font-size: small;
 font-weight: bold; 
}


span#feedaction form p input {
 font-size: small !important;
   font-weight:400 !important;
}

input.tagedit { font-weight: normal; font-size: smaller;}

label, div#channel_admin span, p.bookmarklet {
 font-size:small;
}

ul, li { 
 list-style-type:none; 
}

.content li, content.ul {
   list-style-type:circle; 
}

div#channels li,div#opml li {
  border-bottom: 1px solid  #eef;
  background-color: #fff;
  font-size:small;
}

div#opml li { border: none }

/* folder items */
div#channels li ul li {
 border-bottom: none;
}


/* folder icon */
.folder {
  /* background-image: url(media/folder.gif); 
  background-position: 0px 0.5em;
  background-repeat: no-repeat;
  */
}

/* folder labels */
.folder span {
  font-weight:bold;
  text-transform: capitalize;
}


/* channels and sub channels */
div#channels li:hover, div#channels li.folder ul li:hover,div#channels li.active {
 background-color: #f8f8ff;
}

div#channels li.folder:hover { background-color: transparent}

/** the main divs (nav, side, content, footer, ...) inherit this class */
div.frame {
 background-color: #fff;
 border: 1px solid #ccc;
}

div#nav {
   background-color: #fff;
   background-image: url(media/arrows.gif); 
   background-position: top right;
   background-repeat: no-repeat; 
}

div#footer span { 
 border-right: 1px solid;  
 font-size:  small;
 color: #777;
}

h1 { 
 font-weight: 900;
 font-style:italic;
}

li.item.even, tr.even,div#alltags { background-color: #f9f9f9; }
li.item.odd, tr.odd { background-color: #f4f4f4; }

h3.collapsed {
 border: 1px solid #ddd;
 border-color: #eee;
 background-color: #f9f9f9;
}
  

li.item.unread,h3.collapsed.unread {
 border-color: #eef;
 background-color: #f8f8ff;
}

li.item {
 list-style-type: none;
 border: 1px solid #eee;
}

div#items li.upnav { text-align:right; }

div#items li.upnav a {
 border-left: 1px solid;
 font-size:  small;
}

img { border: none }

.content,.content * {
 font-size: small;
 line-height: 1.4em;
 text-align:justify;
}


.item:hover .content a, .item:hover h5 a { border-bottom: 1px solid #ccc; }

th { 
 background-color: #f4f4f4; 
 font-weight: bold; 
}

table#channeltable,table#foldertable,table#updatetable,table#configtable,.content table {
 border: 1px solid #ddd;
 font-size: small;
}

table .cntr { text-align:center}

table tr:hover td { background-color: #f8f8ff }
  
form.markread p, form.markallread { text-align:right; }

form.markallread {
 text-align:center;
}

p.error {
 color: red;
 font-weight:bold;
}

input, select, textarea {
 border: 1px solid #ddd;
 background-color: #f4f4f4;
}


input[type="radio"], input[type="hidden"] {
 border: none;
 background-color: transparent;
}

div.readmore {
 text-align: right;
 font-size: small;
}



/** from http://css.maxdesign.com.au/listamatic/horizontal11.htm **/

ul.navlist {
 list-style-type: none;
}

ul.navlist li,a.bookmarklet {
 border: 1px solid #ddd;
 background-color: #f4f4f4;
 -moz-border-radius: 5px;
}

/* doubling because IE chokes on the submit selector */
input[type="submit"] {
  border: 1px solid #ddd;
  background-color: #f4f4f4;
  -moz-border-radius: 5px;
}  


input[type="text"]:focus{
 border-color:#aaa;
}

 
.navlist li:hover,input[type="submit"]:hover {
 background-color:  #f8f8ff;
 border-color: #ddf;
}
 
.navlist li a {
 text-decoration: none;
 font-weight: bold;
 color: #667;
 letter-spacing: 0.1em;
}
 
.navlist li.active a,.navlist li a:hover { color: #336; } 

img.favicon { border:none; }

p.stats { font-size: small; }

.searchhit { border-bottom: 1px solid; font-weight: 900 }

label, input[type="submit"] { cursor: pointer; }


/* bad bad bad */
.frame,.item,h3.collapsed,table,div.content img { -moz-border-radius: 5px }

.box { 
 border: 1px solid #eef;
 text-align:center;
}

span.updateres { 
  font-weight: bold; 
}
span.updateres.ok { color: green }
span.updateres.ko { color: red }

table#updatetable td.mc.error { color: #700 }
table#updatetable td.rc { font-weight: bold }

fieldset {  
  text-align: center; 
  border:1px solid #ddd;
  -moz-border-radius: 5px;                                                                                                
}

optgroup { margin: 1em 0 0.2em 0;} 
legend { font-size:small}

div#alltags {
 background-color: #f9f9f9;
 border-color: #eee;
 text-align:justify;

}
#alltags a { margin: 15px 10px; vertical-align:middle; line-height: 50px;
}

div.content img { 
 padding: 0.4em; 
 margin: 0.8em 0; 
 border: 1px solid #ddd;
}

div#pbholder {
  -moz-border-radius: 3px; 
  border: 1px solid #ccc; 
  width:99.2%; 
  text-align:left; 
  height:1.5em; 
  padding:0; 
  margin:auto;
}

div#pbar {
   font-size:small; 
   font-weight: bold; 
   color: #777; 
   line-height:1.35em; 
   width:0%; 
   background-color: #eee;
   margin:2px; 
   padding: 0; 
   border: 1px solid #bbb;
}

div.ief {
   border:1px solid #eee;
   margin: 0.5em 0;
   padding: 0.5em 1em;
   -moz-border-radius: 4px;
}
div.ief p.sbm { margin-top: 1em }

div.ief p a { 
   font-size:small;
   margin: 0 1em 0 0; 
   padding: 0.1em 0.8em;
   -moz-border-radius: 4px;
}

div.ief p a:hover { background-color: #e8e8ff; }

li.item.unread div.ief { background-color: #f3f3ff; }
li.item.unread div.ief p a { background-color: #e5e5f0; }

li.item.odd div.ief { background-color: #e7e7e7; }
li.item.odd div.ief p a { background-color: #d8d8d8; }

li.item.even div.ief { background-color: #f2f2f2; }
li.item.even div.ief p a { background-color: #e3e3e3; }

div.ief form,div.ief form p { padding:0;margin:0}

